# dhan-algo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_btst_exit.py  run_dashboard.py  run_reconcile_trades.py  run_scheduler.py  run_strategy.py  skills-lock.json  strategy.example.json  strategy.json  trade_report.py
dashboard/: app.py
dashboard/static/: index.html
scripts/: btst_exit.py  config_store.py  dhan-algo-scheduler.service  dhan_helpers.py  ip_manager.py  nse_client.py  order_monitor.py  scheduler.py  strategy_loader.py  telegram_alert.py  trade_journal.py  trade_reconcile.py  trading_calendar.py
strategies/: base.py  btst_nifty.py  btst_sensex.py  common.py  manifest.example.json  manifest.json  registry.py  top_mover_options.py
strategies/configs/: btst_nifty.json  btst_sensex.example.json  top_mover_gainers.json  top_mover_loosers.example.json  top_mover_loosers.json
