[project]
name = "dhan-algo"
version = "0.1.0"
description = "NSE top-mover ATM options strategy via Dhan"
requires-python = ">=3.10"
dependencies = [
    "dhanhq>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
run-strategies = "run_strategy:cli"
top-mover-strategy = "run_strategy:cli"
trade-report = "trade_report:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["run_strategy", "trade_report"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "strategies*"]
